--- a/styles/app.css
+++ b/styles/app.css
@@ -223,8 +223,6 @@ main.loading {
   -ms-flex-line-pack: stretch;
       -webkit-align-content: stretch;
           align-content: stretch;
-
-  opacity: 0;
   position: fixed;
   top: 0;
   left: 100%;
@@ -238,12 +236,21 @@ main.loading {
       0px 2px 7px 0px rgba(0, 0, 0, 0.10);
 
   overflow: hidden;
-  transition: opacity 0.3s ease-out;
+  transition: transform 0.3s ease-out;
+  will-change: transform;
 }
 
 .story-details * {
   will-change: transform;
   transform: translateZ(0);
+}
+
+section.hidden {
+  transform: translateX(0);
+}
+
+section.visible {
+  transform: translateX(-100vw);
 }
 
 .story-details__content {
